# term-desktop

./: .gitignore  Changelog.md  README.md  Roadmap.md  TODO.md  Thumbs.db  architecture.drawio  chart.txt  justfile  layout.txt  noxfile.py  pyproject.toml
.github/workflows/: ci-checks.yml
docs/: Thumbs.db  architecture.drawio
src/term_desktop/: __init__.py  aceofbase.py  appbase.py  basetemplate.py  common.py  datawidgets.py  main.py  messages.py  sshdapp.py  styles.tcss
src/term_desktop/app_sdk/: __init__.py  appbase.py  apptemplate.py  apptemplate2.py
src/term_desktop/apps/: __init__.py  apps_readme.md  calculator.py  clock.py  notepad.py  sysinfo.py  syslogs.py  taskfile_window.py  template.py
src/term_desktop/apps/notepad/: app.py
src/term_desktop/apps_old/: calculator.py  notepad.py
src/term_desktop/common/: __init__.py  common.py  common_readme.md  datawidgets.py  errors.py  messages.py  simplebutton.py  spinner.py
src/term_desktop/core/: __init__.py  appchooser.py  apploader.py  desktop.py  explorer.py  fileassociator.py  shell.py  shellbase.py  start.py  startmenu.py  taskbar.py
src/term_desktop/screen/: __init__.py  mainscreen.py  screentemplate.py
src/term_desktop/screens/: __init__.py  mainscreen.py  screenbase.py  screentemplate.py
src/term_desktop/services/: __init__.py  apploader.py  apps.py  databases.py  fileassociation.py  fileassociations.py  manager.py  processes.py  processmanager.py  screens.py  servicebase.py  serviceesmanager.py  servicesmanager.py  serviceswidget.py  servicetemplate.py  shells.py  tde_logging.py  template.py  widget.py  windowmanager.py  windows.py  windowservice.py
src/term_desktop/shell/: __init__.py  desktop.py  shellbase.py  shellmanager.py  shelltemplate.py
src/term_desktop/shell/default/: __init__.py  appchooser.py  explorer.py  start.py  taskbar.py
src/term_desktop/shell/ranger_theme/: __init__.py  appchooser.py  explorer.py  start.py
src/term_desktop/shells/: shells_readme.md
src/term_desktop/shells/default/: shell.py
src/term_desktop/shells/ranger_theme/: __init__.py  shell.py
src/term_desktop/windows/: windowbase.py
tests/: test_suite.py
