[project]
name = "term-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
]
license = { text = "MIT" }
keywords = ["python", "textual", "tui", "window", "widget"]
dependencies = [
    "textual>=3.3.0",
    "textual-autocomplete>=4.0.4",
    "textual-pyfiglet>=0.8.6",
    "textual-slidecontainer>=0.4.2",
    "textual-window>=0.3.5",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/edward-jazzhands/term-desktop"
Changelog = "https://github.com/edward-jazzhands/term-desktop/blob/master/Changelog.md"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
term-desktop = "term_desktop.main:run"

[tool.black]
line-length = 110

[tool.mypy]
python_version = "3.10"
pretty = true
strict = true
